--- a/app/src/main/res/layout/fragment_profiles.xml
+++ b/app/src/main/res/layout/fragment_profiles.xml
@@ -15,6 +15,7 @@
 
         <ImageView
             android:layout_width="21dp"
+            android:id="@+id/add"
             android:layout_height="21dp"
             android:layout_marginLeft="15dp"
             android:layout_gravity="left|center_vertical"
@@ -146,7 +147,9 @@
         </LinearLayout>
 
 
-
     </LinearLayout>
+    <androidx.fragment.app.FragmentContainerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
