--- a/app/src/main/res/layout/activity_changedefpass.xml
+++ b/app/src/main/res/layout/activity_changedefpass.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/root_layout"
+    android:id="@+id/root_layout1"
     tools:context=".ChangedefpassActivity">
 
 
