--- a/app/src/main/res/layout/fragment_addmember.xml
+++ b/app/src/main/res/layout/fragment_addmember.xml
@@ -299,15 +299,16 @@
                                 android:textColor="#99FFFFFF"
                                 android:textStyle="normal"
                                 android:textSize="12dp" />
+
                             <ImageView
                                 android:id="@+id/ivRecieveCheck"
-                                android:visibility="visible"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginLeft="-120dp"
+                                android:layout_width="205dp"
+                                android:layout_height="25dp"
                                 android:layout_gravity="right|center_vertical"
-                                android:src="@drawable/ic_checked"/>
+                                android:layout_marginLeft="-120dp"
+                                android:layout_marginTop="10dp"
+                                android:src="@drawable/ic_checked"
+                                android:visibility="visible" />
                         </LinearLayout>
                         <ImageView
                             android:layout_width="match_parent"
