--- a/app/src/main/res/layout/fragment_get_member.xml
+++ b/app/src/main/res/layout/fragment_get_member.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/content"
-    tools:context=".ui.profiles.ViewCompanyFragment">
-
+    tools:context=".ui.profiles.GetMemberFragment">
 
     <include
         layout="@layout/fragment_profiles"
@@ -13,9 +11,9 @@
         android:layout_height="wrap_content"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/purple_500"
-        android:layout_marginTop="50dp"
         android:id="@+id/recyclerview"
+        android:layout_marginTop="50dp"
+        android:background="@color/teal_200"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
