--- a/app/src/main/res/layout/activity_add_new_member.xml
+++ b/app/src/main/res/layout/activity_add_new_member.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddNewMemberActivity">
 
@@ -383,6 +384,9 @@
 
     </LinearLayout>
 
-
-
+<!--        <include-->
+<!--            layout="@layout/activity_main"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="bottom"/>-->
 </FrameLayout>
