--- a/app/src/main/res/layout/activity_add_new_member.xml
+++ b/app/src/main/res/layout/activity_add_new_member.xml
@@ -59,6 +59,7 @@
 
             <FrameLayout
                 android:id="@+id/flTab3"
+                android:contentDescription="MEMBER"
                 android:visibility="visible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
