--- a/app/src/main/res/layout/fragment_addmember.xml
+++ b/app/src/main/res/layout/fragment_addmember.xml
@@ -228,6 +228,8 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/adminOrEmployee"
+                    android:contentDescription="ADMIN"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
