--- a/app/src/main/res/layout/activity_add_new_member.xml
+++ b/app/src/main/res/layout/activity_add_new_member.xml
@@ -59,7 +59,6 @@
 
             <FrameLayout
                 android:id="@+id/flTab3"
-                android:contentDescription="MEMBER"
                 android:visibility="visible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -134,7 +133,7 @@
 
 
                 <EditText
-                    android:id="@+id/etUsername"
+                    android:id="@+id/etMFname"
                     android:paddingLeft="20dp"
                     android:paddingTop="0dp"
                     android:layout_width="match_parent"
@@ -158,7 +157,7 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:id="@+id/lstname"
+                        android:id="@+id/etMLname"
                         android:paddingLeft="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -185,7 +184,7 @@
 
 
                     <EditText
-                        android:id="@+id/phonenum"
+                        android:id="@+id/etMPhone"
                         android:paddingLeft="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -212,7 +211,7 @@
 
 
                     <EditText
-                        android:id="@+id/address"
+                        android:id="@+id/etMAddress"
                         android:paddingLeft="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -230,6 +229,8 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/adminOrEmployee"
+                    android:contentDescription="ADMIN"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -280,7 +281,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/llemploye"
+                        android:id="@+id/llEmploye"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
                         android:layout_marginLeft="13dp"
@@ -301,15 +302,16 @@
                                 android:textColor="#99FFFFFF"
                                 android:textStyle="normal"
                                 android:textSize="12dp" />
+
                             <ImageView
                                 android:id="@+id/ivRecieveCheck"
-                                android:visibility="visible"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginLeft="-120dp"
+                                android:layout_width="205dp"
+                                android:layout_height="25dp"
                                 android:layout_gravity="right|center_vertical"
-                                android:src="@drawable/ic_checked"/>
+                                android:layout_marginLeft="-120dp"
+                                android:layout_marginTop="10dp"
+                                android:src="@drawable/ic_checked"
+                                android:visibility="visible" />
                         </LinearLayout>
                         <ImageView
                             android:layout_width="match_parent"
@@ -326,6 +328,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/commission"
+                    android:visibility="gone"
                     android:background="@drawable/ic_rectangle_memberflid"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
@@ -359,7 +362,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/loginbtn"
+                        android:id="@+id/btnAddProfile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Add Profile"
@@ -385,9 +388,6 @@
 
     </LinearLayout>
 
-<!--        <include-->
-<!--            layout="@layout/activity_main"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="bottom"/>-->
+
+
 </FrameLayout>
