--- a/app/src/main/res/layout/viewcompany.xml
+++ b/app/src/main/res/layout/viewcompany.xml
@@ -26,7 +26,7 @@
                     android:orientation="vertical"
                     android:layout_weight="1">
                     <TextView
-                        android:id="@+id/txtCname"
+                        android:id="@+id/txtCylindername"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Prima"
