--- a/app/src/main/res/layout/viewmember.xml
+++ b/app/src/main/res/layout/viewmember.xml
@@ -407,13 +407,13 @@
                         android:id="@+id/tv_Cylinder"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
-                        android:text="50"
                         android:fontFamily="@font/sofia_pro_regular_az"
-                        android:textStyle="normal"
-                        android:textSize="14dp"
+                        android:text="50"
                         android:textColor="@color/white"
-                        android:layout_gravity="center"/>
+                        android:textSize="14dp"
+                        android:textStyle="normal" />
 
 
                 </FrameLayout>
