Call,Add Reseller & company, Sorting

--- a/app/src/main/res/layout/activity_add_new_member.xml
+++ b/app/src/main/res/layout/activity_add_new_member.xml
@@ -131,24 +131,61 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp">
 
-
-                <EditText
-                    android:id="@+id/etMFname"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="0dp"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/sofia_pro_regular_az"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:hint="First name"
-                    android:inputType="text"
-                    android:textColor="@color/black"
-                    android:background="@drawable/ic_rectangle_member"
-                    app:backgroundTint="#fff"/>
+                    android:layout_height="wrap_content">
 
-                <LinearLayout
+                    <EditText
+                        android:id="@+id/etUsername"
+                        android:paddingLeft="20dp"
+                        android:paddingTop="0dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="First name"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+
+                    <EditText
+                        android:id="@+id/etCompanyname"
+                        android:paddingLeft="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Company Name"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+
+                    <EditText
+                        android:id="@+id/etResellerfullname"
+                        android:paddingLeft="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Reseller Fullname"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+                </RelativeLayout>
+
+
+
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_rectangle_memberflid"
@@ -157,7 +194,7 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:id="@+id/etMLname"
+                        android:id="@+id/lstname"
                         android:paddingLeft="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -171,10 +208,40 @@
                         android:background="@drawable/ic_rectangle_member"
                         app:backgroundTint="#fff"/>
 
+                    <EditText
+                        android:id="@+id/cylindername"
+                        android:paddingLeft="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Cylinder Name"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
 
-                </LinearLayout>
+                    <EditText
+                        android:id="@+id/pasalname"
+                        android:paddingLeft="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Pasal Name"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
 
-                <LinearLayout
+
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_rectangle_memberflid"
@@ -184,7 +251,37 @@
 
 
                     <EditText
-                        android:id="@+id/etMPhone"
+                        android:id="@+id/resellerphonenum"
+                        android:paddingLeft="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Phone Number"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+
+                    <EditText
+                        android:id="@+id/companyphonenum"
+                        android:paddingLeft="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Phone Number"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+
+                    <EditText
+                        android:id="@+id/memberphonenum"
                         android:paddingLeft="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -199,9 +296,9 @@
                         app:backgroundTint="#fff"/>
 
 
-                </LinearLayout>
+                </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_rectangle_memberflid"
@@ -211,7 +308,37 @@
 
 
                     <EditText
-                        android:id="@+id/etMAddress"
+                        android:id="@+id/reselleraddress"
+                        android:paddingLeft="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Address"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+
+                    <EditText
+                        android:id="@+id/companyaddress"
+                        android:paddingLeft="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Address"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+
+                    <EditText
+                        android:id="@+id/memberaddress"
                         android:paddingLeft="25dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -226,14 +353,13 @@
                         app:backgroundTint="#fff"/>
 
 
-                </LinearLayout>
+                </RelativeLayout>
 
                 <LinearLayout
-                    android:id="@+id/adminOrEmployee"
-                    android:contentDescription="ADMIN"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:id="@+id/status"
                     android:orientation="horizontal">
                     <!--            send-->
                     <LinearLayout
@@ -244,12 +370,14 @@
                         android:layout_weight="1"
                         android:background="@drawable/send_recieve_bg"
                         android:backgroundTint="#5FB2F6">
+
                         <ImageView
                             android:layout_width="150dp"
                             android:layout_height="50dp"
-                            android:layout_weight="1"
                             android:layout_gravity="left|center_vertical"
-                            android:src="@drawable/ic_team_building"/>
+                            android:layout_weight="1"
+                            android:src="@drawable/ic_team_building" />
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -281,7 +409,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/llEmploye"
+                        android:id="@+id/llemploye"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
                         android:layout_marginLeft="13dp"
@@ -302,16 +430,15 @@
                                 android:textColor="#99FFFFFF"
                                 android:textStyle="normal"
                                 android:textSize="12dp" />
-
                             <ImageView
                                 android:id="@+id/ivRecieveCheck"
-                                android:layout_width="205dp"
-                                android:layout_height="25dp"
-                                android:layout_gravity="right|center_vertical"
-                                android:layout_marginLeft="-120dp"
+                                android:visibility="visible"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
                                 android:layout_marginTop="10dp"
-                                android:src="@drawable/ic_checked"
-                                android:visibility="visible" />
+                                android:layout_marginLeft="-120dp"
+                                android:layout_gravity="right|center_vertical"
+                                android:src="@drawable/ic_checked"/>
                         </LinearLayout>
                         <ImageView
                             android:layout_width="match_parent"
@@ -328,7 +455,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/commission"
-                    android:visibility="gone"
                     android:background="@drawable/ic_rectangle_memberflid"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
@@ -354,6 +480,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/btnAddProfile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_rectangle_addbtn"
@@ -362,7 +489,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/btnAddProfile"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Add Profile"
@@ -378,6 +505,53 @@
 
 
                 </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/btnAddCompany"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_rectangle_addbtn"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add Company"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="25dp"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/sofia_pro_semi_bold_az"
+                        android:textSize="32sp"
+                        android:textStyle="bold"
+                        android:textFontWeight="900"
+                        android:textColor="#f55a63"
+                        android:layout_weight="3"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/btnAddReseller"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_rectangle_addbtn"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add Reseller"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="25dp"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/sofia_pro_semi_bold_az"
+                        android:textSize="32sp"
+                        android:textStyle="bold"
+                        android:textFontWeight="900"
+                        android:textColor="#f55a63"
+                        android:layout_weight="3"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -388,6 +562,9 @@
 
     </LinearLayout>
 
-
-
+    <!--        <include-->
+    <!--            layout="@layout/activity_main"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_gravity="bottom"/>-->
 </FrameLayout>
