--- a/app/src/main/res/layout/activity_presetting.xml
+++ b/app/src/main/res/layout/activity_presetting.xml
@@ -70,7 +70,7 @@
 
         <Switch
             android:layout_weight="0"
-            android:id="@+id/simpleSwitch"
+            android:id="@+id/touchIdSwitch"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
